update to kdb 1.2.31